# lectorium-zoom-pull

./: README.md  requirements.txt  setup.cfg
lectorium_zoom_pull/: auth.py  main.py  meetings.py  models.py
src/lectorium_zoom_pull/: __main__.py  auth.py  cli.py  commands.py  config.py  downloads.py  main.py  meetings.py  models.py  months.py
tests/: test_meeting_filters.py
