[metadata]
name = lectorium-zoom-pull
version = 0.0.3+5
author = bcskda
author_email = kuptsov.da@phystech.edu
description = Tool to interact with Zoom Cloud Recordings API
url = https://github.com/bcskda/lectorium-zoom-pull

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    PyJWT
    click
    pydantic
    requests

[options.packages.find]
where = src
